# oclpd

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.in  README.md  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
cmake/: CMakeCache.txt  FindOpenCL.cmake  config.h.in
data/: Makefile.am  Makefile.in  r1.h5  r1.mat  r2.h5  r2.mat  r3.h5  r3.mat
src/: CLProcessor.cpp  CLProcessor.hpp  CMakeLists.txt  Container.hpp  InputParser.hpp  MXFile.hpp  Makefile.am  Makefile.in  NDData.hpp  Options.cpp  Options.hpp  PulseDesign.hpp  SimpleTimer.hpp  ocllorenz.cpp  oclpd.cpp
src/opencl/: Makefile.am  Makefile.in  sim.cl
